# Portfolio

./: .gitignore  README.md
Angular/ProjectsParts/Project01/: arc-manager.json  package-lock.json  package.json  testRequests,json
Native (CSharp)/OfficeApp/OfficeControl/: Program.cs
Qt( Cpp)/ProjectsParts/Project01/: Launcher.pro  Launcher.pro.qtds  (+2 more)
Qt( Cpp)/ProjectsParts/Project03/: CMakeLists.txt  appversion  collecter.py  main.cpp  version.rc.in
Qt( Cpp)/ProjectsParts/Project03/components/cnpapi/: CMakeLists.txt  CnpApi  auth.h  browser.h  material.h  state.h
Qt( Cpp)/ProjectsParts/Project03/components/cnpsocket/: CMakeLists.txt  CnpSocket  action.h  materialaction.h
Qt( Cpp)/ProjectsParts/Project03/components/netlib/: CMakeLists.txt  network.cpp  network.h
Qt( Cpp)/ProjectsParts/Project03/components/pipe/: CMakeLists.txt  CnpPipe  actions.h  client.cpp  client.h  server.cpp  server.h
Qt( Cpp)/ProjectsParts/Project03/components/qtsystemlib/: CMakeLists.txt
Qt( Cpp)/ProjectsParts/Project03/components/qtsystemlib/src/: filehelper.cpp  filehelper.h  iohelper.h
Qt( Cpp)/ProjectsParts/Project03/sioclient/: CMakeLists.txt
Qt( Cpp)/ProjectsParts/Project03/sioclient/src/: sio_client.cpp  sio_client.h  sio_message.h  sio_socket.cpp  sio_socket.h
Qt( Cpp)/ProjectsParts/Project03/sioclient/src/internal/: sio_client_impl.cpp  sio_client_impl.h  sio_packet.cpp
Qt( Cpp)/ProjectsParts/Project03/src/: application.cpp  application.h  browseraction.cpp  browseraction.h  browserstate.cpp  browserstate.h  customtypes.h  jsactions.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pipeactions.h  pipehandler.cpp  pipehandler.h  socketclient.cpp  socketclient.h
Qt( Cpp)/ProjectsParts/Project03/src/config/: config.h  configKeys.h  configs.qrc
Qt( Cpp)/ProjectsParts/Project03/src/config/resources/: config.json
Qt( Cpp)/ProjectsParts/Project03/src/socket/packs/: actionpack.h  packbase.h  windowMaterialAction.h
Qt( Cpp)/ProjectsParts/Project04/: .gitignore  CMakeLists.txt  CompileComands.txt  appmodules  appqml  apputils  appversion  collecter.py  extendmodules  repository.code-workspace  version.rc.in
Qt( Cpp)/ProjectsParts/Project04/components/api/: CMakeLists.txt  api.cpp  api.h  network.cpp  network.h
Qt( Cpp)/ProjectsParts/Project04/components/api/base/: requesttype.h
Qt( Cpp)/ProjectsParts/Project04/components/api/models/: basemodel.cpp  basemodel.h  filemodel.cpp  filemodel.h  releasemodel.cpp  releasemodel.h  usermodel.cpp  usermodel.h  userrolemodel.cpp  userrolemodel.h
Qt( Cpp)/ProjectsParts/Project04/components/qtsystemlib/src/: filehelper.cpp  filehelper.h  fileinfo.h  iohelper.cpp
Qt( Cpp)/ProjectsParts/Project04/src/: main.cpp
Qt( Cpp)/ProjectsParts/Project04/src/base/: Singleton.h  ibase.h
Qt( Cpp)/ProjectsParts/Project04/src/config/: ConfigItem.h  config.cpp  config.h  configKeys.h  configs.qrc
Qt( Cpp)/ProjectsParts/Project04/src/config/resources/: config.json  servers.json  settings.json
Qt( Cpp)/ProjectsParts/Project04/src/core/: api.cpp  api.h  apphase.h  application.cpp  application.h  browsermanager.cpp  browsermanager.h  configcontroller.cpp  configcontroller.h  errorcontroller.cpp  errorcontroller.h  logger.cpp  logger.h  releaseloader.cpp  releaseloader.h  releasemanager.cpp  releasemanager.h  serversmanager.cpp  serversmanager.h  session.cpp  session.h  settings.cpp  settings.h  settingsjsoncontroller.cpp  settingsjsoncontroller.h  updater.cpp  updater.h  zip.cpp
Qt( Cpp)/ProjectsParts/Project04/src/core/helpers/: releasehelper.cpp  releasehelper.h
Qt( Cpp)/ProjectsParts/Project04/src/core/releases/: browser.cpp  browser.h  cross.cpp  cross.h  fileinfo.h  launcher.cpp  launcher.h  release.cpp  release.h  releasestate.h  releasetag.cpp  releasetag.h  runrelease.cpp  runrelease.h  streamingassets.cpp  streamingassets.h  videowall.cpp  videowall.h
Qt( Cpp)/ProjectsParts/Project04/src/core/settings/: commonsettings.cpp  commonsettings.h  settingsbase.cpp  settingsbase.h  settingsitem.cpp  settingsitem.h  settingsitemfilepath.cpp  settingsitemfilepath.h  settingsiteminputfloat.cpp  settingsiteminputfloat.h  settingsiteminputint.cpp  settingsiteminputint.h  settingsiteminputpassword.cpp  settingsiteminputpassword.h  settingsiteminputstring.cpp  settingsiteminputstring.h  settingsitemsfactory.cpp  settingsitemsfactory.h  settingsitemtoggle.cpp  settingsitemtoggle.h  settingsitemtoggleregedit.cpp  settingsitemtoggleregedit.h
Qt( Cpp)/ProjectsParts/Project04/src/core/structs/: apibase.h  renderStreamingConnectType.h  server.cpp  server.h
Qt( Cpp)/ProjectsParts/Project04/src/core/users/: user.cpp  user.h  userrole.cpp  userrole.h
Qt( Cpp)/ProjectsParts/Project04/src/core/wall/: clientlog.cpp  clientlog.h
Qt( Cpp)/ProjectsParts/Project04/src/general/: appbase.cpp  appbase.h  authorization.cpp  authorization.h  settingsstorage.cpp  settingsstorage.h  tag.h
Qt( Cpp)/ProjectsParts/Project04/src/network/: network.cpp  network.h  network.pri
Qt( Cpp)/ProjectsParts/Project04/src/ui/: form.cpp  form.h
Qt( Cpp)/ProjectsParts/Project04/src/ui/controls/: ButtonCheckbox.qml  CMakeLists.txt  CustomCheckBox.qml  ErrorToggle.qml  IconeButton.qml  ReleasesMenuItem.qml  ServerButton.qml  SettingsBorderInput.qml  SettingsDropdown.qml  SettingsInput.qml  SettingsInputField.qml  SettingsNavigationButton.qml  SettingsToggle.qml  SettingsVectorInput.qml  StandartButton.qml  StandartInput.qml  Tooltip.qml  UpdateButton.qml  qmldir
Qt( Cpp)/ProjectsParts/Project04/src/ui/main/: Auth.qml  Base.qml  CMakeLists.txt  Config.qml  Main.qml  ReleaseItem.qml  ReleasesList.qml  Run.qml  ServiceSettings.qml  SettingsPage.qml  Update.qml  qmldir
Qt( Cpp)/ProjectsParts/Project04/src/ui/settings/: CMakeLists.txt  CommonSettingsPage.qml  CreateServer.qml  ServerSettingsPage.qml  ServersList.qml  SettingsElementList.qml  qmldir
Qt( Cpp)/ProjectsParts/Project04/src/ui/static/: CMakeLists.txt  qmldir
Qt( Cpp)/ProjectsParts/Project04/src/ui/themes/cnp/: Theme.qml
Qt( Cpp)/ProjectsParts/Project04/src/ui/themes/lukoil/: Theme.qml
(+5779 files in other folders)
